@@ -1,0 +1,23 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+  <head>
+    <title>OpenFlights: Forgot password?</title>
+    <link rel="stylesheet" href="/css/style_reset.css" type="text/css">
+    <link rel="stylesheet" href="/openflights.css" type="text/css">
+  </head>
+
+  <body>
+    <div id="contexthelp">
+      <h1>OpenFlights: Forgot password?</h1>
+
+      <p>If you have forgotten your password <i>and</i> you gave us your e-mail address when signing up, please send mail to <i>jani at contentshare dot sg</i>, give your account name and request to have your password reset.  A new password will be mailed to the address you gave us within a few days.</p><br>
+
+      <p>If you didn't register an e-mail address, then sorry, we don't know that you're you, so there's really nothing we can do.</p><br>
+
+      <INPUT type="button" value="Return" onClick="javascript:history.back(1)">
+      </FORM>
+
+    </div>
+
+  </body>
+</html>
