@@ -11,7 +11,7 @@
     <script type="text/javascript" src="/js/greatcircle.js"></script>
     <script type="text/javascript" src="/js/sortable.js"></script>
     <script type="text/javascript" src="/js/scw.js"></script>
-    <script type="text/javascript" src="/openflights.js?version=20081001"></script>
+    <script type="text/javascript" src="/openflights.js?version=20081002"></script>
   </head>
 
   <body>
