@@ -1,5 +1,11 @@
+<b>2008-10-02</b>
+
+* Increased default resolution of GC paths
+* Manual implementation of forgotten password requests
+
 <b>2008-10-01</b>
 
+* Fixed major bug preventing new users from entering airlines
 * Reload flight list after "delete" from flight list
 
 <b>2008-09-30</b>
